commit-15:添加导航栏用户信息修改，使用sharedPreferences进行存储

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
 
         <activity android:name=".memo.MemoContentActivity"></activity>
+
+        <activity android:name=".settings.UserInformationActivity"></activity>
     </application>
 
 </manifest>
